added new section

--- a/index.html
+++ b/index.html
@@ -26,5 +26,16 @@
         <img src="my-bg.png" alt="">
     </div>
     </section>
+    <section class="dream-big">
+     <div class="half-width">
+         <img src="fardinbg2.png" alt="">
+     </div>
+     <div class="half-width">
+        <h1>Dream Big</h1>
+        <h3>Become A Web Developer</h3>
+        <p>Learning to program is an important  thing tot do as it is the driving force of the modern world</p>
+        <a class="link-button" href="">Subscribe </a>
+    </div>
+    </section>
   </body>
 </html>
